Quick non regexp solution to spacing issue.

--- a/index.css
+++ b/index.css
@@ -4,14 +4,18 @@
 	filter: invert(1) hue-rotate(180deg);
 }
 
-.mtext {
+mtext {
 	/*padding: 0 5px 0 5px !important;*/
 	margin: 0 2px 0 2px !important;
 
 }
 
+math {
+	display: inline;
+}
+
 .mn {
-	margin: 0 2px 0 2px !important;
+	/* margin: 0 2px 0 2px !important; */
 }
 
 .ld {
